--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "clean": "rimraf dist/*",
     "dev": "vuepress dev docs",
-    "build": "vuepress build docs"
+    "build": "vuepress build docs && yes | cp -r dist/* ../Celthi.github.io "
   },
   "license": "MIT",
   "devDependencies": {
